--- a/Biorefa/app/src/main/res/layout/fragmento_cadastro_biorefa.xml
+++ b/Biorefa/app/src/main/res/layout/fragmento_cadastro_biorefa.xml
@@ -76,21 +76,18 @@
         android:layout_height="wrap_content"
         android:text="Gravar"
         android:id="@+id/botaoGravar"
-        android:layout_marginBottom="42dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="39dp"
-        android:layout_marginStart="39dp" />
+        android:layout_below="@+id/nomeResposta"
+        android:layout_toRightOf="@+id/textView2"
+        android:layout_toEndOf="@+id/textView2" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Limpar Campos"
         android:id="@+id/botaoLimpar"
-        android:layout_alignBottom="@+id/botaoGravar"
         android:layout_alignRight="@+id/nomeResposta"
         android:layout_alignEnd="@+id/nomeResposta"
         android:layout_marginRight="30dp"
-        android:layout_marginEnd="30dp" />
+        android:layout_marginEnd="30dp"
+        android:layout_alignBottom="@+id/botaoGravar" />
 </RelativeLayout>
