--- a/Biorefa/app/src/main/res/layout/fragmento_tela_inicial.xml
+++ b/Biorefa/app/src/main/res/layout/fragmento_tela_inicial.xml
@@ -6,9 +6,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/idBiorefa"
+        android:src="@mipmap/biorefa"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:src="@mipmap/biorefa" />
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="wrap_content"
